--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,8 +18,7 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:gravity="start"
-            android:orientation="horizontal"
-            fab:layout_heightPercent="12%">
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/textView"
